# workflow-orchestration-queue-papa89

./: .ai-repository-summary.md  AGENTS.md  Dockerfile.notifier  Dockerfile.sentinel  README.md  docker-compose.yml  pyproject.toml  workflow-orchestration-queue-papa89.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/app/: build-test.yml  docker.yml  security.yml
docs/: F1-feature-full-dev-plan.md  F1-full-dev-plan_(OPENCODE).md  architecture.md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: implementation-plan.md  non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md  zulu48-fix-plan.md
docs/adr/: README.md  template.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  github_events.py
src/queue/: __init__.py
test/: test-opencode-run.sh
tests/: conftest.py  test_github_queue.py  test_work_item.py
